design fixes in dashboard (dropup, scrollbar)

--- a/sass/modules/_drop-downs.sass
+++ b/sass/modules/_drop-downs.sass
@@ -14,3 +14,6 @@ span.badge
 span.badge:hover
   background-color: $color-delete-red
   cursor: pointer
+
+.custom-menu-item
+  width: 100%
